# PFE_Classification

./: CMakeLists.txt  README.md  application_viewer.cpp  application_viewer.h  classification_thread.cpp  classification_thread.h  classification_training_tab.cpp  classification_training_tab.h  classifier_viewer.cpp  classifier_viewer.h  classifier_viewer.pro  data_augmentation_tab.cpp  data_augmentation_tab.h  data_augmentation_widget.cpp  data_augmentation_widget.h  data_handler.cpp  data_handler.h  data_loader.cpp  data_loader.h  dataloader_tab.cpp  dataloader_tab.h  image_collection.cpp  image_collection.h  image_label.cpp  image_label.h  image_transformation.h  image_transformation_viewer.cpp  image_transformation_viewer.h  image_transformation_widget.h  images_preview_widget.cpp  images_preview_widget.h  main.cpp  model_runner.cpp  model_runner.h  preprocessing.cpp  preprocessing.h  preprocessing_tab.cpp  preprocessing_tab.h  preprocessing_viewer.cpp  preprocessing_viewer.h  (+10 more)
src/: application_viewer.cpp  application_viewer.h  classification_thread.cpp  classification_thread.h  classification_training_tab.cpp  classification_training_tab.h  classification_training_widget.cpp  classification_training_widget.h  constants.h  data_augmentation_tab.cpp  data_augmentation_tab.h  data_augmentation_widget.cpp  data_augmentation_widget.h  data_handler.cpp  data_handler.h  image_label.cpp  image_label.h  image_transformation.cpp  image_transformation.h  image_transformation_viewer.cpp  image_transformation_viewer.h  image_transformation_widget.cpp  image_transformation_widget.h  images_preview_widget.cpp  images_preview_widget.h  integer_slider.cpp  integer_slider.h  main.cpp  preprocessing_tab.cpp  preprocessing_tab.h  preprocessing_viewer.cpp  preprocessing_viewer.h  result_tab.cpp  result_tab.h  result_thread.cpp  result_thread.h  tab.cpp  tab.h  utils.cpp  utils.h
tests/: classification_thread_test.cpp  classification_training_tab_test.cpp  classification_training_widget_test.cpp  data_augmentation_tab_test.cpp  data_augmentation_widget_test.cpp  data_handler_test.cpp  image_transformation_test.cpp  image_transformation_widget_test.cpp  images_preview_widget_test.cpp  integer_slider_test.cpp  preprocessing_tab_test.cpp  result_tab_test.cpp  result_thread_test.cpp  test_data_handler.cpp  test_hello.cpp  testgui.cpp
